--- a/src/components/admin/List.module.css
+++ b/src/components/admin/List.module.css
@@ -1,5 +1,4 @@
 .containerList {
-    background-color: #f3f0ff;
     padding: 20px;
     border-radius: 10px;
     max-width: 600px;
@@ -7,11 +6,17 @@
   }
   
   .list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     list-style-type: none;
     padding: 0;
   }
   
   .listItem {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     background-color: #ffffff;
     padding: 10px;
     margin-bottom: 10px;
@@ -19,22 +24,24 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.25);
     flex-wrap: wrap;
   }
   
   .buttonList {
-    background-color: #9b7ce4;
+    background-color: #B059B1;
     color: #fff;
     border: none;
     padding: 8px 12px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-size: 15px;
+    font-weight: 600;
   }
 
     .buttonList:hover {
-    background-color: #7b5cbb; 
+    background-color: #914a92; 
   }
 
   .buttonListDelete:hover {
@@ -49,10 +56,12 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-size: 15px;
+    font-weight: 600;
   }
   
   .addButtonList {
-    background-color: #4d34b4;
+    background-color: #B059B1;
     color: #fff;
     padding: 12px 20px;
     border-radius: 8px;
@@ -64,7 +73,7 @@
   }
   
   .addButtonList:hover {
-    background-color: #39269b;
+    background-color: #914a92;
   }
 
   .titleItemList{
