--- a/src/pages/AdminSpace/AdminDashboard.module.css
+++ b/src/pages/AdminSpace/AdminDashboard.module.css
@@ -1,9 +1,7 @@
 
 .containerDashboard {
-  background-color: #f3f0ff; 
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-width: 800px;
   margin: 20px auto;
   font-family: "Arial", sans-serif;
@@ -11,7 +9,7 @@
 }
 
 .titleDashboard {
-  color: #4d34b4;
+  color: black;
   text-align: center;
 }
 
@@ -25,7 +23,7 @@
 }
 
 .navDashboard button {
-  background-color: #9b7ce4;
+  background-color: #B059B1;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -36,7 +34,7 @@
 }
 
 .navDashboard button:hover {
-  background-color: #7b5cbb;
+  background-color: #914a92;
 }
 
 .sectionDashboard {
@@ -44,17 +42,24 @@
 }
 
 .h2Dashboard {
-  color: #4d34b4;
+  color: black;
   text-align: center;
   font-size: 24px;
 }
 
 .openButton{
-  background-color: #4d34b4;
+  position: fixed;
+  bottom: 10px;
+  right: 50px;
+  height: 50px;
+  width: 200px;
+  background-color: #B059B1;
+  font-size: 15px;
+  font-weight: 600;
 }
 
 .openButton:hover{
-  background-color: #37257e;
+  background-color: #914a92;
 }
 
 @media (max-width:550px){
